fix: uneven gaps

--- a/resources/css/user-management/dashboard.css
+++ b/resources/css/user-management/dashboard.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    margin: 2rem 0;
+    margin: 1rem 0;
 }
 
 
